# DB2-Compression

./: CMakeLists.txt  README.md
data/: float column  int column  string column
doc/: Doxyfile
include/: config.hpp.in
include/compression/: compressed_column.hpp  dictionary_compressed_column.hpp  rle_compressed_column.hpp
include/core/: base_column.hpp  column.hpp  column_base_typed.hpp  global_definitions.hpp
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  base_column.cpp
src/tests/: utils.hpp
